--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Sellsnap</title>
+    <title>Contact Us - ClearValue</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,8 +35,8 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="/index.html" class="flex items-center">
-                <img src="/transparent.png" alt="Sellsnap Logo" class="h-8 w-8 mr-2">
-                <span class="text-2xl font-bold text-gray-800">Sellsnap</span>
+                <img src="/transparent.png" alt="ClearValue Logo" class="h-8 w-8 mr-2">
+                <span class="text-2xl font-bold text-gray-800">ClearValue</span>
             </a>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="/index.html#features" class="text-gray-600 hover:text-red-500 font-medium">Features</a>
@@ -75,8 +75,8 @@
         <div class="container mx-auto px-6 py-8">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center mb-4 md:mb-0">
-                    <img src="/transparent.png" alt="Sellsnap Logo" class="h-6 w-6 mr-2">
-                    <span class="text-lg font-semibold">Sellsnap</span>
+                    <img src="/transparent.png" alt="ClearValue Logo" class="h-6 w-6 mr-2">
+                    <span class="text-lg font-semibold">ClearValue</span>
                 </div>
                 <div class="flex space-x-6 mb-4 md:mb-0">
                     <a href="/index.html#features" class="hover:text-red-400">Features</a>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="text-center text-gray-500 mt-8 pt-4 border-t border-gray-700">
-                &copy; 2025 Sellsnap. All rights reserved.
+                &copy; 2025 ClearValue. All rights reserved.
             </div>
         </div>
     </footer>
